Remove overzealous KASSERT: the refcount can be non-zero if another thread attempts to use a non-open file descriptor.  from ad

fixes PR kern/43694